<resources>
    <string name="application_id_name" translatable="false">com.google.android.gms.ads.APPLICATION_ID</string>
   <string name="my_app_id_value_test" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <!--
    <string name="my_app_id_value" translatable="false">ca-app-pub-3712591331020847~6900850072</string>
    <string name="banner_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_id" translatable="false">ca-app-pub-3712591331020847/6517706695</string>
    <string name="reques_id_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="reques_id" translatable="false">ca-app-pub-3712591331020847/9690664946</string>
    -->

    <string name="yandex_banner_id_test" translatable="false">R-M-DEMO-320x50</string>
    <string name="yandex_banner_id" translatable="false">R-M-1588009-1</string>

    <string name="yandex_banner_desc_id_test" translatable="false">R-M-DEMO-320x50</string>
    <string name="yandex_banner_desc_id" translatable="false">R-M-1588009-6</string>

    <string name="yandex_interstitial_id_test" translatable="false">R-M-DEMO-240x400-context</string>
    <string name="yandex_interstitial_id" translatable="false">R-M-1588009-2</string>

    <string name="yandex_reward_id_test" translatable="false">R-M-DEMO-rewarded-client-side-rtb</string>
    <string name="yandex_reward_id" translatable="false">R-M-1588009-5</string>


    <string name="link_on_my_app_for_share">Do you want to know your totem animal and pass other personality tests? \n Take the app test:\n https://play.google.com/store/apps/details?id=com.totems.totemanimals \n</string>
    <string name="only_link_app" translatable="false">https://play.google.com/store/apps/details?id=com.totems.totemanimals \n</string>
    <string name="text_share_link_app">Do you want to know your totem animal and take various personality tests?</string>
    <string name="my_totem_text_result">My test result: </string>
    <string name="my_totem_text_search">Description: </string>
    <string name="share_totem"> Share: </string>
    <string name="share_app_info"> Share app </string>

    <string name="app_name">Totem animals</string>
    <string name="Alert_title_exit">Exit</string>
    <string name="Alert_message_exit">Close application?</string>
    <string name="Alert_yes">Yes</string>
    <string name="Alert_no">No</string>

    <string name="close_test_alert">Close test?</string>
    <string name="close_test">Close test</string>
    <string name="nav_menu_test">Tests</string>
    <string name="nav_menu_search">Descriptions</string>
    <string name="nav_menu_info">Info</string>
    <string name="nav_menu_exit">Exit</string>

    <string name="desc_act_btn_back">back</string>
    <string name="my_btn_my_userBlog">More</string>
    <string name="btn_estimate_gp">Estimate App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start_new_test">Totem test</string>
    <string name="start_new_dosha_test">Dosha Test</string>
    <string name="stop_test">Close test</string>
    <string name="testres_antipode">Your antipode</string>
    <string name="testres_your_type">Your type is</string>
    <string name="char_from">from</string>
    <string name="begin_test_totem_animal">To determine your totem animal, take the test:</string>
    <string name="Test_no_found">Test_not_found</string>
    <string name="result_no_found">Error Result</string>
    <string name="look_totem_blank">Look yours totem Animals</string>
    <string name="look_dosha_blank">Look yours Dosha-type</string>
    <string name="no_totem_animals">Test is not complete. Take the test</string>

    <string name="close_get_result_test">Calculate and get test result</string>
    <string name="measuring_result">Calculation will take no more than 30 seconds, please reward the developer and watch ads :) </string>

    <string name="Text_righter" translatable="false">Text about totem animals, partially taken from the site:</string>
    <string name="www_osebe" translatable="false">www.o-sebe.com</string>

    <string name="instagramm_owner">Our instagramm: Foxy &amp; Antoffy</string>
    <string name="our_inst_descript_1">Building a bridge between mind and spirituality  \n
    Exploring totem practices \n
    We live inseparably 24/7</string>
    <string name="descr_info_2">В обычной жизни «шаманское», эзотерическое знание понимается большинством, как некие тайные знания, доступные только посвященным «шаманам», просветленным. Однако большинство таких знаний, умений и практик давно вошли в нашу жизнь и все мы неосознанно пользуемся ими, не задумываясь откуда эти практики возникли.
\n \n Мы верим в существование духовной, эзотерической реальности, которая так же не отделима от обычной жизни, что позволяет трактовать некоторые обыденные события необычным способом. Осознание и принятие Тотемного животного является одной из таких практик.
\n \n Это приложение разработано чтобы помочь вам найти своё тотемное животное и узнать о себе больше с помощью наших тестов.
\n \n В будущем, в приложении будут добавлены тесты, которые могут помочь вам найти себя, осознать свои личностные качества, разобраться в своих устремлениях.
Присоединяйтесь к нам в Instagram, что бы узнать больше о окружающем нас, огромном, необычном и загадочном мире.
</string>


    <string name="my_dosha_is">My dosha according to Ayurveda:</string>
    <string name="dosha_pretest_desc">Do you want to know your Dosha type according to Ayurveda?</string>

    <string name="name_diagramm">Balance \n Dosh</string>

    <string name="dosha_title_vata">Vata</string>
    <string name="dosha_title_pitta">Pitta</string>
    <string name="dosha_title_kapha">Kapha</string>

    <string name="dosha_level">level</string>
    <string name="dosha_level_bal">balanced</string>
    <string name="dosha_level_h">high</string>
    <string name="dosha_level_l">low</string>

    <string name="btn_read_dosha_res">How to balance doshas</string>
    
    <string name="rc_text_all_animals">Descriptions all Totem Animals</string>
    <string name="rc_text_all_doshas">Concept of Doshas in Ayurveda</string>


</resources>


