<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home_menu_id"
        android:title="@string/nav_menu_home"
        android:icon="@drawable/ic_adb_black_32dp"
        android:orderInCategory="1"/>

    <item android:id="@+id/search_menu_id"
        android:title="@string/nav_menu_search"
        android:icon="@drawable/ic_search_black_32dp"
        android:orderInCategory="2"/>

    <item android:id="@+id/info_menu_id"
        android:title="@string/nav_menu_info"
        android:icon="@drawable/ic_info_outline_black_32dp"
        android:orderInCategory="3"/>

    <item android:id="@+id/exit_menu_id"
        android:title="@string/nav_menu_exit"
        android:icon="@drawable/ic_exit_to_app_black_32dp"
        android:orderInCategory="4"/>
</menu>