<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/shape_rectangle_r10"
    tools:context=".fragment_info">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/googleg_standard_color_18"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/im_myuser_blog_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/googleg_standard_color_18" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/title_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:background="@drawable/shape_rectangle_r10"
                android:elevation="10dp">

                <TextView
                    android:id="@+id/tv_myuser_blog_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:text="@string/instagramm_owner"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/descr_card_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/shape_rectangle_r10">

                <TextView
                    android:id="@+id/tv_myuser_blog_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:elevation="10dp"
                    android:padding="10dp"
                    android:text="@string/our_inst_descript_1"
                    android:textColor="#000000" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_my_inst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/shape_rectangle_r10"
                android:backgroundTint="@color/green_style_btn"
                android:elevation="10dp"
                android:padding="5dp"
                android:text="@string/my_btn_my_userBlog" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:background="@drawable/shape_rectangle_r10"
                android:elevation="10dp" >

                <TextView
                    android:id="@+id/tv_myuser_blog_description2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:elevation="10dp"
                    android:padding="10dp"
                    android:text="Здесь еще описнаие и тп тра ла ла тру лу лу где что куда"
                    android:textColor="#000000" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:paddingHorizontal="3dp"
                    android:paddingVertical="3dp"
                    android:text="@string/Text_righter" />

                <TextView
                    android:id="@+id/tv_site_righter_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:maxLines="1"
                    android:paddingHorizontal="3dp"
                    android:paddingVertical="3dp"
                    android:text="@string/www_osebe"
                    android:textColor="#1A39FF"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>